[package]
name = "ya_bike_bot"
version = "0.1.0"
authors = ["Pedro Lopes de Azevedo <ordepi@gmail.com>"]
edition = "2018"
description = "Yet another telegram bot that delivers shared bike information. Did this as way to implement something using Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv= "0.15.0"
teloxide = "0.2.0"
log = "0.4.8"
tokio = "0.2.11"
pretty_env_logger = "0.4.0"
surf = "1.0.3"
serde = "1.0.105"
geoutils = "0.4.0"
