[package]
name = "ya_bike_bot"
version = "0.1.0"
authors = ["Pedro Lopes de Azevedo <ordepi@gmail.com>"]
edition = "2018"
description = "Yet another telegram bot that delivers shared bike information. Did this as way to implement something using Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv= "0.15.0"
teloxide = "0.2.0"
log = "0.4.8"
tokio = { version =  "0.2.11", features = ["time"] }
pretty_env_logger = "0.4.0"
surf = "1.0.3"
serde = "1.0.105"
geoutils = "0.4.0"
url = "2.1.1"
warp = "0.2.2"
reqwest = "0.10.4"
serde_json = "1.0.50"
redis = "0.15.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
thiserror = "1.0.16"
futures = "0.3.4"
anyhow = "1.0.28"
